added doc for checkout and small changes
